# focuswriter

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  CREDITS  ChangeLog  INSTALL  NEWS  README  focuswriter.pro  mac_deploy.sh  org.gottcode.focuswriter.json  windows_deploy.bat  windows_deploy.sh
.github/: FUNDING.yml
cmake/: AddVersionCompileDefinition.cmake  BundleResources.cmake  TranslateMetainfo.cmake
debian/: .gitignore  README.source  changelog  control  copyright  focuswriter.manpages  gbp.conf  install  menu  rules  watch
debian/man/: focuswriter.1
debian/patches/: 0001-desktop-keywords.patch  0001-revert-SDL-load-fix.patch  series
debian/source/: include-binaries
debian/upstream/: metadata
dict/: README_pt_BR.txt  README_pt_PT.txt  en_US.dic.hz  es_ES.aff  fr_FR.aff.hz  fr_FR.dic.hz  pl_PL.aff.hz  pl_PL.dic.hz  pt_BR.aff  pt_BR.dic.hz  pt_PT.aff  pt_PT.dic  pt_PT.dic.hz
hunspell/: license.hunspell  makefile.mk
icons/: focuswriter.desktop  focuswriter.icns  icon.rc  icons.qrc
icons/oxygen/: COPYING  index.theme
icons/oxygen/scalable/: edit-select-all.svgz
resources/dict/: README_cs_CZ.txt  README_de_DE.txt  README_el_GR.txt  README_en_US.txt  README_es_MX.txt  README_fr_FR.txt  README_hu_HU.txt  README_it_IT.txt  README_pl_PL.txt  README_pt_PT.txt  README_ru_RU.txt  README_uk_UA.txt  cs_CZ.aff.hz  cs_CZ.dic.hz  de_DE.aff.hz  de_DE.dic.hz  el_GR.aff.hz  el_GR.dic.hz  en_US.aff.hz  es_ES.aff.hz  es_ES.dic.hz  es_MX.aff.hz  es_MX.dic.hz  fr_FR.aff.hz  fr_FR.dic.hz  hu_HU.aff.hz  hu_HU.dic.hz  it_IT.aff.hz  it_IT.dic.hz  nl_NL.aff.hz  nl_NL.dic.hz  pt_BR.aff.hz  pt_PT.aff.hz  pt_PT.dic.hz  ru_RU.aff.hz  ru_RU.dic.hz  sv_SE.aff.hz  sv_SE.dic.hz  uk_UA.aff.hz  uk_UA.dic.hz
resources/images/: images.qrc  lorem.txt
resources/images/icons/: icons.qrc
resources/mac/: Info.plist  Info.plist.in  background.tiff  focuswriter.icns  locversion.plist
resources/symbols/: CMakeLists.txt  generate.pro  main.cpp
resources/themes/: bitterskies.theme  enchantment.theme  gentleblues.theme  spygames.theme  tranquility.theme
resources/unix/: focuswriter.1  focuswriter.appdata.xml  focuswriter.appdata.xml.in  focuswriter.desktop  focuswriter.desktop.in  focuswriter_32.xpm
resources/unix/po/: LINGUAS  af_ZA.po  ar.po  bs.po  ca.po  cs.po  da.po  de.po  description.pot  el.po  (+39 more)
resources/windows/: dictionaries.sh  installer.nsi  removeprevious.nsh
scripts/: install-dependencies-debian-ubuntu.sh
src/: abstract_dictionary.h  abstract_dictionary_provider.h  action_manager.cpp  action_manager.h  alert.cpp  alert.h  alert_layer.cpp  alert_layer.h  application.cpp  application.h  block_stats.cpp  block_stats.h  color_button.cpp  color_button.h  daily_progress.cpp  daily_progress.h  daily_progress_dialog.cpp  daily_progress_dialog.h  daily_progress_label.cpp  daily_progress_label.h  deltas.cpp  deltas.h  dictionary.cpp  dictionary.h  dictionary_data.cpp  dictionary_data.h  dictionary_manager.cpp  dictionary_manager.h  dictionary_ref.cpp  dictionary_ref.h  document.cpp  document.h  document_cache.cpp  document_cache.h  document_watcher.cpp  document_watcher.h  document_writer.cpp  document_writer.h  find_dialog.cpp  find_dialog.h  (+81 more)
src/ao/: sound.cpp  sound.h
src/enchant/: dictionary.cpp  dictionary.h  dictionary_data.cpp  dictionary_data.h  dictionary_manager.cpp  dictionary_manager.h
src/fileformats/: clipboard_mac.cpp  clipboard_mac.h  clipboard_windows.cpp  clipboard_windows.h  docx_reader.cpp  docx_reader.h  docx_writer.cpp  docx_writer.h  format_manager.cpp  format_manager.h  format_reader.h  html_writer.cpp  html_writer.h  md_reader.cpp  md_reader.h  md_writer.cpp  md_writer.h  odt_reader.cpp  odt_reader.h  odt_writer.cpp  odt_writer.h  rtf_reader.cpp  rtf_reader.h  rtf_tokenizer.cpp  rtf_tokenizer.h  rtf_writer.cpp  rtf_writer.h  txt_reader.cpp  txt_reader.h
src/hunspell/: dictionary.cpp  dictionary.h  dictionary_data.cpp  dictionary_data.h  dictionary_hunspell.cpp  dictionary_hunspell.h  dictionary_manager.cpp  dictionary_manager.h  dictionary_provider_hunspell.cpp  dictionary_provider_hunspell.h  dictionary_ref.cpp  dictionary_ref.h
src/nssound/: sound.mm
src/nsspellchecker/: dictionary.h  dictionary.mm  dictionary_data.h  dictionary_data.mm  dictionary_manager.h  dictionary_manager.mm  dictionary_nsspellchecker.h  dictionary_nsspellchecker.mm  dictionary_provider_nsspellchecker.h  dictionary_provider_nsspellchecker.mm  dictionary_ref.h  dictionary_ref.mm
src/qsound/: sound.cpp  sound.h
src/qtsingleapplication/: qtlocalpeer.cpp  qtsingleapplication.cpp  qtsingleapplication.h
src/qtzip/: QtZipReader  QtZipWriter  qtzip.cpp  qtzipreader.h  qtzipwriter.h
src/rtf/: clipboard_mac.cpp  clipboard_windows.cpp  clipboard_windows.h  converter.cpp  converter.h  reader.cpp  reader.h  tokenizer.cpp  tokenizer.h  writer.cpp  writer.h
src/sdl/: sound.cpp
src/spelling/: abstract_dictionary.h  abstract_dictionary_provider.h  dictionary_dialog.cpp  dictionary_dialog.h  dictionary_manager.cpp  dictionary_manager.h  dictionary_provider_hunspell.cpp  dictionary_provider_hunspell.h  dictionary_provider_nsspellchecker.h  dictionary_provider_nsspellchecker.mm  dictionary_provider_voikko.cpp  dictionary_provider_voikko.h  dictionary_ref.h  highlighter.cpp  highlighter.h  spell_checker.cpp  spell_checker.h
src/voikko/: dictionary_provider_voikko.cpp  dictionary_provider_voikko.h
translations/: cs.qm  cs.ts  de.qm  de.ts  en.ts  en_US.ts  es.qm  es.ts  es_MX.qm  es_MX.ts  focuswriter_af_ZA.qm  focuswriter_af_ZA.ts  focuswriter_ar.qm  focuswriter_ar.ts  focuswriter_bs.ts  focuswriter_ca.qm  focuswriter_ca.ts  focuswriter_cs.qm  focuswriter_cs.ts  focuswriter_da.qm  focuswriter_da.ts  focuswriter_de.qm  focuswriter_de.ts  focuswriter_el.qm  focuswriter_el.ts  focuswriter_en.qm  focuswriter_en.ts  focuswriter_en_GB.qm  focuswriter_en_GB.ts  focuswriter_eo.qm  focuswriter_eo.ts  focuswriter_es.qm  focuswriter_es.ts  focuswriter_es_MX.qm  focuswriter_es_MX.ts  focuswriter_et.ts  focuswriter_fi.qm  focuswriter_fi.ts  focuswriter_fr.qm  focuswriter_fr.ts  (+63 more)
(+6 files in other folders)
